Add base file for Courses
Create courses_menu.html and courses.jsp, which will display
the courses in the database. Prerequisites.jsp holds the
course-prerequisite relationships.

--- a/WebContent/courses_menu.html
+++ b/WebContent/courses_menu.html
@@ -2,18 +2,15 @@
 <html>
 
 <head>
-<title>Main Menu</title>
+<title>Courses Menu</title>
 </head>
 
-<b>Data Entry Menu</b>
+<b>Courses Menu</b>
 <ul>
     <li>
         <a href="courses.jsp">Courses</a>
     </li>
     <li>
-        <a href="classes.jsp">Classes</a>
-    </li>
-    <li>
-        <a href="students.jsp">Students</a>
+        <a href="prerequisites.jsp">Prerequisites</a>
     </li>
 </ul>
