Commit Anthony Hem's changes
Anthony's github ID: tonysbooty

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Main Menu</title>
+<title>Mile Stone 2</title>
 </head>
 
 <b>Data Entry Menu</b>
@@ -15,5 +15,11 @@
     </li>
     <li>
         <a href="students.jsp">Students</a>
+    </li>
+    <li>
+        <a href="faculty.jsp">Faculty</a>
+    </li>
+    <li>
+        <a href="courseenrollment.jsp">Course Enrollment</a>
     </li>
 </ul>
