Reconstruct existing database tables
Change the structures of all the existing database tables.

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Mile Stone 2</title>
+<title>TritonLink 132B</title>
 </head>
 
 <b>Data Entry Menu</b>
@@ -14,12 +14,18 @@
         <a href="classes.jsp">Classes</a>
     </li>
     <li>
+        <a href="department.jsp">Departments</a>
+    </li>
+    <li>
         <a href="students.jsp">Students</a>
     </li>
     <li>
         <a href="faculty.jsp">Faculty</a>
     </li>
     <li>
-        <a href="courseenrollment.jsp">Course Enrollment</a>
+        <a href="class_enrollment.jsp">Class Enrollment</a>
+    </li>
+    <li>
+        <a href="prerequisites.jsp">Prerequisites</a>
     </li>
 </ul>
