Reformat Web pages and Create class meeting files
Change the menu bar to display relevant links to whatever entity the user is viewing.
Allow weekly and single (e.g. a review session) meetings to be added for existing classes.

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -8,10 +8,16 @@
 <b>Data Entry Menu</b>
 <ul>
     <li>
+        <a href="menu.html">Main Menu</a>
+    </li>
+    <li>
         <a href="courses.jsp">Courses</a>
     </li>
     <li>
         <a href="classes.jsp">Classes</a>
+    </li>
+    <li>
+        <a href="class_enrollment.jsp">Class Enrollment</a>
     </li>
     <li>
         <a href="department.jsp">Departments</a>
@@ -21,11 +27,5 @@
     </li>
     <li>
         <a href="faculty.jsp">Faculty</a>
-    </li>
-    <li>
-        <a href="class_enrollment.jsp">Class Enrollment</a>
-    </li>
-    <li>
-        <a href="prerequisites.jsp">Prerequisites</a>
     </li>
 </ul>
