--- a/WebContent/students_menu.html
+++ b/WebContent/students_menu.html
@@ -11,11 +11,11 @@
         <a href="menu.html">Main Menu</a>
     </li>
     <li>
-        <a href="courses.jsp">Course List</a>
+        <a href="students.jsp">Student List</a>
     </li>
     <ul>
-    <li>
-        <a href="prerequisites.jsp">Prerequisites</a>
-    </li>
+
+
+
     </ul>
 </ul>
