Create subsections for students and thesis committees
Divide students into undergraduates and graduates; these two tables
currently need to have the data input separately, after the student is created.
Create a Thesis Committee form for graduates to enter the committee members.

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -23,9 +23,12 @@
         <a href="department.jsp">Departments</a>
     </li>
     <li>
+        <a href="faculty.jsp">Faculty</a>
+    </li>
+    <li>
         <a href="students.jsp">Students</a>
     </li>
     <li>
-        <a href="faculty.jsp">Faculty</a>
+        <a href="thesiscommittees.jsp">Thesis Committees</a>
     </li>
 </ul>
