--- a/WebContent/students_menu.html
+++ b/WebContent/students_menu.html
@@ -14,8 +14,11 @@
         <a href="students.jsp">Student List</a>
     </li>
     <ul>
-
-
-
+    <li>
+        <a href="undergraduates.jsp">Undergraduates</a>
+    </li>
+    <li>
+        <a href="graduates.jsp">Graduates</a>
+    </li>
     </ul>
 </ul>
