--- a/WebContent/menu_classes.html
+++ b/WebContent/menu_classes.html
@@ -2,20 +2,34 @@
 <html>
 
 <head>
-<title>TritonLink 132B</title>
+<title>Data Entry Menu</title>
 </head>
 
 <b>Data Entry Menu</b>
 <ul>
     <li>
         <a href="menu_expanded.html">Main Menu</a>
-    </li>
     <li>
         <a href="courses.jsp">Courses</a>
     </li>
+    
+    <!-- Classes List -->
     <li>
         <a href="classes.jsp">Classes</a>
     </li>
+    <ul>
+	    <li>
+	        <a href="class_meetings.jsp">Meetings</a>
+	    </li>
+	    <li>
+	        <a href="weeklymeetings.jsp">Weekly</a>
+	    </li>
+	    <li>
+	        <a href="singlemeetings.jsp">Single</a>
+	    </li>
+    </ul>
+    <!-- ------------ -->
+    
     <li>
         <a href="class_enrollment.jsp">Class Enrollment</a>
     </li>
