--- a/WebContent/menu_courses.html
+++ b/WebContent/menu_courses.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>TritonLink 132B</title>
+<title>Data Entry Menu</title>
 </head>
 
 <b>Data Entry Menu</b>
@@ -10,9 +10,27 @@
     <li>
         <a href="menu_expanded.html">Main Menu</a>
     </li>
+    
+    <!-- Courses List -->
     <li>
         <a href="courses.jsp">Courses</a>
     </li>
+    <ul>
+	    <li>
+	        <a href="course_prerequisites.jsp">Prerequisites</a>
+	    </li>
+	    <li>
+	        <a href="course_prevnumbers.jsp">Previous Numbers</a>
+	    </li>
+	    <li>
+            <a href="course_gradeoptions.jsp">Grade Options</a>
+        </li>
+	    <li>
+	        <a href="course_unitoptions.jsp">Unit Options</a>
+	    </li>
+    </ul>
+    <!-- ------------ -->
+    
     <li>
         <a href="classes.jsp">Classes</a>
     </li>
