--- a/WebContent/menu_degrees.html
+++ b/WebContent/menu_degrees.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>TritonLink 132B</title>
+<title>Data Entry Menu</title>
 </head>
 
 <b>Data Entry Menu</b>
@@ -19,9 +19,21 @@
     <li>
         <a href="class_enrollment.jsp">Class Enrollment</a>
     </li>
+    
+    <!-- Degrees List -->
     <li>
-        <a href="degrees.jsp">Degrees</a>
-    </li>    
+        <a href="degrees.jsp">Degrees List</a>
+    </li>
+    <ul>
+    <li>
+        <a href="degreecategories.jsp">Categories</a>
+    </li>
+    <li>
+        <a href="concentrations.jsp">Concentrations</a>
+    </li>
+    </ul>
+    <!-- ------------ -->
+    
     <li>
         <a href="department.jsp">Departments</a>
     </li>
