--- a/WebContent/menu_students.html
+++ b/WebContent/menu_students.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>TritonLink 132B</title>
+<title>Data Entry Menu</title>
 </head>
 
 <b>Data Entry Menu</b>
@@ -28,9 +28,24 @@
     <li>
         <a href="faculty.jsp">Faculty</a>
     </li>
+
+    <!-- Students List -->
     <li>
         <a href="students.jsp">Students</a>
     </li>
+    <ul>
+	    <li>
+	        <a href="undergraduates.jsp">Undergraduates</a>
+	    </li>
+	    <li>
+	        <a href="graduates.jsp">Graduates</a>
+	    </li>
+	    <li>
+	        <a href="probations.jsp">Probations</a>
+	    </li>
+    </ul>
+    <!-- ------------- -->
+    
     <li>
         <a href="thesiscommittees.jsp">Thesis Committees</a>
     </li>
