made changes to menu.html and created two new files for report 1 a

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -34,4 +34,7 @@
     <li>
         <a href="thesiscommittees.jsp">Thesis Committees</a>
     </li>
+    <li>
+        <a href="classes_by_student.jsp">Report 1(a)</a>
+    </li>
 </ul>
