Add table StudentEnrollment and rename files
Add table that lists student ID and the quarter he or she is enrolled in.
Rename Milestone 3 forms so they can be grouped by input_description.jsp and display_description.jsp

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -34,7 +34,12 @@
     <li>
         <a href="thesiscommittees.jsp">Thesis Committees</a>
     </li>
+
+</ul>
+
+<b>Reports Menu</b>
+<ul>
     <li>
-        <a href="classes_by_student.jsp">Report 1(a)</a>
+        <a href="input_classes_by_student.jsp">Report 1(a)</a>
     </li>
 </ul>
