--- a/WebContent/menu_degrees.html
+++ b/WebContent/menu_degrees.html
@@ -22,7 +22,7 @@
     
     <!-- Degrees List -->
     <li>
-        <a href="degrees.jsp">Degrees List</a>
+        <a href="degrees.jsp">Degrees</a>
     </li>
     <ul>
     <li>
