--- a/WebContent/menu_students.html
+++ b/WebContent/menu_students.html
@@ -43,6 +43,9 @@
 	    <li>
 	        <a href="probations.jsp">Probations</a>
 	    </li>
+	    <li>
+            <a href="student_enrollment.jsp">Enrollment</a>
+        </li>
     </ul>
     <!-- ------------- -->
     
