--- a/WebContent/menu_expanded.html
+++ b/WebContent/menu_expanded.html
@@ -74,8 +74,18 @@
         <li>
             <a href="probations.jsp">Probations</a>
         </li>
+        <li>
+            <a href="student_enrollment.jsp">Enrollment</a>
+        </li>
     </ul>
     <li>
         <a href="thesiscommittees.jsp">Thesis Committees</a>
+    </li>
+</ul>
+
+<b>Reports Menu</b>
+<ul>
+    <li>
+        <a href="input_classes_by_student.jsp">Report 1(a)</a>
     </li>
 </ul>
