Add Report 1b and update side menus
Add report that displays the complete roster of a course.
Update all menus so that the reports can be accessed from any page

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -42,4 +42,7 @@
     <li>
         <a href="input_classes_by_student.jsp">Report 1(a)</a>
     </li>
+    <li>
+        <a href="input_roster_of_class.jsp">Report 1(b)</a>
+    </li>
 </ul>
