--- a/WebContent/menu_degrees.html
+++ b/WebContent/menu_degrees.html
@@ -47,3 +47,13 @@
         <a href="thesiscommittees.jsp">Thesis Committees</a>
     </li>
 </ul>
+
+<b>Reports Menu</b>
+<ul>
+    <li>
+        <a href="input_classes_by_student.jsp">Report 1(a)</a>
+    </li>
+    <li>
+        <a href="input_roster_of_class.jsp">Report 1(b)</a>
+    </li>
+</ul>
