Add missing database columns/tables
Add CourseType table, which holds data for whether a class is a lower div,
upper div, technical elective, etc.
Add degree column to Undergraduate table, which holds data for what degree an undergraduate is working towards.

--- a/WebContent/menu_courses.html
+++ b/WebContent/menu_courses.html
@@ -28,6 +28,9 @@
 	    <li>
 	        <a href="course_unitoptions.jsp">Unit Options</a>
 	    </li>
+	    <li>
+            <a href="course_types.jsp">Types</a>
+        </li>
     </ul>
     <!-- ------------ -->
     
