--- a/WebContent/menu_expanded.html
+++ b/WebContent/menu_expanded.html
@@ -26,6 +26,9 @@
         <li>
             <a href="course_unitoptions.jsp">Unit Options</a>
         </li>
+        <li>
+            <a href="course_types.jsp">Types</a>
+        </li>
     </ul>
     <li>
         <a href="classes.jsp">Classes</a>
