Add Part 3a and Update menus
Add completed parts ii and iii for 3a in Milestone 3, which allows users to view grade distributions.
Update all menus to show links to the Reports at all times.

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -51,4 +51,7 @@
     <li>
         <a href="input_undergrad_requirements.jsp">Report 1(d)</a>
     </li>
+    <li>
+        <a href="input_undergrad_requirements.jsp">Report 3(a)</a>
+    </li>
 </ul>
