--- a/WebContent/menu_classes.html
+++ b/WebContent/menu_classes.html
@@ -58,4 +58,13 @@
     <li>
         <a href="input_roster_of_class.jsp">Report 1(b)</a>
     </li>
+    <li>
+        <a href="input_student_gradereport.jsp">Report 1(c)</a>
+    </li>
+    <li>
+        <a href="input_undergrad_requirements.jsp">Report 1(d)</a>
+    </li>
+    <li>
+        <a href="input_undergrad_requirements.jsp">Report 3(a)</a>
+    </li>
 </ul>
