--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -52,6 +52,9 @@
         <a href="input_undergrad_requirements.jsp">Report 1(d)</a>
     </li>
     <li>
+        <a href="input_ms_requirements.jsp">Report 1(e)</a>
+    </li>
+    <li>
         <a href="input_course_gradedistribution.jsp">Report 3(a)</a>
     </li>
 </ul>
