--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -55,6 +55,9 @@
         <a href="input_ms_requirements.jsp">Report 1(e)</a>
     </li>
     <li>
+        <a href="input_scheduling_review.jsp">Report 2(b)</a>
+    </li>
+    <li>
         <a href="input_course_gradedistribution.jsp">Report 3(a)</a>
     </li>
 </ul>
