Add Part 2a and Update menu files
Add Part 2a of Milestone 3, which displays all courses offered in the current quarter that
a given student cannot enroll in, due to conflicts with classes that he or she is currently enrolled in.
Update menu links to show Reports 1e, 2a, 2b.

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -55,6 +55,9 @@
         <a href="input_ms_requirements.jsp">Report 1(e)</a>
     </li>
     <li>
+        <a href="input_student_classconflict.jsp">Report 2(a)</a>
+    </li>
+    <li>
         <a href="input_scheduling_review.jsp">Report 2(b)</a>
     </li>
     <li>
