--- a/WebContent/menu_expanded.html
+++ b/WebContent/menu_expanded.html
@@ -101,6 +101,15 @@
         <a href="input_undergrad_requirements.jsp">Report 1(d)</a>
     </li>
     <li>
+        <a href="input_ms_requirements.jsp">Report 1(e)</a>
+    </li>
+    <li>
+        <a href="input_student_classconflict.jsp">Report 2(a)</a>
+    </li>
+    <li>
+        <a href="input_scheduling_review.jsp">Report 2(b)</a>
+    </li>
+    <li>
         <a href="input_course_gradedistribution.jsp">Report 3(a)</a>
     </li>
 </ul>
